[package]
name = "polars-wasm"
version = "0.0.1"
authors = [""]
edition = "2018"
license = "MIT"
description = "DataFrame library"


[dependencies]
futures = "0.3.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.41"
wasm-bindgen = { version = "0.2.54", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.8" }
js-sys = "0.3.31"
console_error_panic_hook = "0.1.6"
uuid = { version = "0.8", features = ["v4"] }
async-trait = "0.1.40"
anyhow = "1"
bincode = "1.3.1"
wasm-bindgen-test = "0.3.18"
web-sys = { version = "0.3.45", features = [
    "Window",
    "Worker",
    "WorkerGlobalScope",
    "WorkerOptions",
    "MessageEvent",
    "DedicatedWorkerGlobalScope",
    "AddEventListenerOptions",
] }
thiserror = "1.0.21"
log = "0.4.11"
wasm-logger = "0.2.0"
polars = { path = "../polars" }
